Correct the width of the card that causes it to break in landscape mode

--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ p, h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   justify-content: space-between;
   width: 40%;
-  height: 83vh;
+  height: 83%;
   background: hsla(0, 0%, 100%, 1);
   border-radius: 6px;
   box-shadow: 0px 4px 50px 0px rgba(4, 8, 19, 0.10);
